* PeerSelector:       - Limit exploratory tunnels to connected peers when over         half the connection limit (was 80%)       - Have the high capacity tier fall back to a new connected tier         before moving on to the not failing tier         so that tunnel build success doesn't collapse     * PeerTestJob:       - Limit to connected peers
Monotone-Parent: 0fe30a0a15c46f626e0fa9a66067346c236bf51a
Monotone-Revision: 6fddab77462a92759305edee8fe5a944d6865375

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-17T12:37:03
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2009-06-17 zzz
+    * PeerSelector:
+      - Limit exploratory tunnels to connected peers when over
+        half the connection limit (was 80%)
+      - Have the high capacity tier fall back to a new connected tier
+        before moving on to the not failing tier
+        so that tunnel build success doesn't collapse and drive
+        connections to the limit
+    * PeerTestJob:
+      - Limit to connected peers
+
 2009-06-12 zzz
     * Console:
       - Move the console css from default.css in the .war to docs/themes/console/console.css,
