* desktopgui:       - Added client and server tunnel view         (saving does not work yet)
Monotone-Parent: 6fddab77462a92759305edee8fe5a944d6865375
Monotone-Revision: 51b043fd6531665ecf71fd6c4bf16ab37930c2e2

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-06-17T21:54:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-06-17 Mathiasdm
+    * desktopgui:
+      - Added client and server tunnel view
+        (saving does not work yet)
+
 2009-06-17 zzz
     * PeerSelector:
       - Limit exploratory tunnels to connected peers when over
