--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,15 @@
+2009-06-21 zzz
+    * Browser Launch: Wait until the routerconsole is up before launching the browser
+    * Installer: Fix wrapper.config parsing on windows
+    * netdb.jsp: Add country chart at bottom, clean up version chart
+    * News Fetcher:
+      - Change default news URL, use it instead of the old one even if
+        the old one is saved in the configuration, to assist in the transition
+    * ReseedHandler:
+      - check for upper case HREF to be compatible with apache indexes
+    * Statistics Manager: post-0.7.4 cleanup
+    * Transport: Treat 5.0.0.0/8 (Hamachi) as local
+
 2009-06-17 Mathiasdm
     * desktopgui:
       - Added client and server tunnel view
