--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-06-25 sponge
+    * Summary frame layout change so it makes sense.
+
 2009-06-23 zzz
     * Browser Launch: Add sensible-browser, x-www-browser, defaultbrowser, and
       www-browser in an attempt to launch the user's preferred browser
