* Update versions, package release * Remove the last reference to my eepsite as a "news.xml" source,   and likewise stop my public key from being included   among valid release signing keys.
Monotone-Parent: cbcb13838ca498b2215236c545b6af127d5effb9
Monotone-Revision: 3d86e500d1550fccc2ac29371555a1a5af2c5c2b

Monotone-Author: complication@mail.i2p
Monotone-Date: 2009-06-29T01:07:51
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.7.5

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+* 2009-06-29  0.7.5 released
+
+2009-06-29 Complication
+    * Update versions, package release
+    * Remove the last reference to my eepsite as a "news.xml" source,
+      and likewise stop my public key from being included
+      among valid release signing keys.
+
 2009-06-25 sponge
     * Summary frame layout change so it makes sense.
 
