history for prop from test2 branch
Monotone-Parent: 045f42ccf52e038671823fdd00bff2b00d566ef2
Monotone-Revision: 8d35e0858095b3eed3fb6d8f4ecee23cbdadfbb1

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-29T03:21:12
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2009-06-29 zzz
+    * Console: Convert table headers to <th> to prep for CSS changes
+    * Console CSS: Move css file, make a classic theme to prep for CSS changes
+    * Console: Move favicon.ico and i2plogo.png out of the .war
+      so that the HTTP proxy can use them directly;
+      proxy error pages must be updated next
+    * NetDb stats: Normalize tunnel build stats for increased anonymity,
+      effective in 0.7.6
+
 * 2009-06-29  0.7.5 released
 
 2009-06-29 Complication
