--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-06-30 sponge
+    * General cleanup on streaming and ministreaming.
+      This fixes some compile warnings, and prepares for a larger fix.
+      There is no code-flow changes, just lint. One warning remains as I am
+      unsure exactly how to solve the problem yet.
+
 * 2009-06-29  0.7.5 released
 
 2009-06-29 Complication
