--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-07-05 sponge
+    * Added X-I2P-DestB64 and X-I2P-DestB32 http headers
+
 2009-06-29 zzz
     * Big directory rework:
       Eliminate all uses of the current working directory, and
