--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,7 @@
-2009-07-07 z3d
-		* Introducing 2 new console themes (light & dark), in addition
-			to changes to the console navigation; navbar now resides in
-			the sidepanel).
+2009-07-07  dr|z3d
+    * Introducing 2 new console themes (light & dark), in addition
+      to changes to the console navigation; navbar now resides in 
+      the sidepanel and other stuff besides. More to follow!
 
 2009-07-06 zzz
     * Console: Fix small textareas on Opera
