--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-2009-07-07  dr|z3d
+2009-07-11 dr|z3d
+    * More enhancements to the router console, consolidation of the
+      light and dark themes.     
+      - Apply new themes with routerconsole.theme=light/dark/classic
+				added to advanced config.
+				      
+2009-07-07 dr|z3d
     * Introducing 2 new console themes (light & dark), in addition
       to changes to the console navigation; navbar now resides in 
       the sidepanel and other stuff besides. More to follow!
