* netdb.jsp: Fix bad tag causing orange mouseovers     * Merge as -7
Monotone-Parent: 42ce78cff0305bc79884a8c247d827c1c7d2002a
Monotone-Revision: e2f291650ed7f42c0e5f538b2cf3a2bd29f3f1ba

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-11T22:38:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,11 +1,12 @@
+2009-07-11 zzz
+    * netdb.jsp: Fix bad tag causing orange mouseovers
+
 2009-07-11 dr|z3d
     * More enhancements to the router console, consolidation of the
       light and dark themes.     
       - Apply new themes with routerconsole.theme=light/dark/classic
-				added to advanced config.
-				      
-2009-07-07 dr|z3d
-2009-07-07  dr|z3d
+        added to advanced config.
+
 2009-07-11 zzz
     * Build Handler: Drop rather than reject requests when near
       conn limits and the next hop is not connected, to reduce
