* Add configui.jsp     * orange flash remove take 2
Monotone-Parent: e2f291650ed7f42c0e5f538b2cf3a2bd29f3f1ba
Monotone-Revision: c9f62429ff1da5dab2645a23c311297bb5060a5a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-12T03:21:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-07-12 zzz
+    * Add configui.jsp
+    * orange flash remove take 2
+
 2009-07-11 zzz
     * netdb.jsp: Fix bad tag causing orange mouseovers
 
