Help page tweaks, css fiddlery, and a version bump to -10!
Monotone-Parent: 77a06a05de5fbb4a4f4bbdbc6e59fd83db244644
Monotone-Revision: 786898344e2d8c990b05149818317b10fab824fb

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-14T01:22:03
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-07-14 dr|z3d
+    * Increment to 0.7.5-10
+    * Tidy up layout of readme.* files.
+    * Work on console css to make it more Opera/webkit friendly.
+    * Other cosmetic tweaks.
+
 2009-07-13 zzz
     * Build: Add readme*.html files to the udpater
     * Build Handler: Don't reject for conn limits if class O,
