* Slackware SlackBuild fixes.
Monotone-Parent: 54da58cfac28446e75ecf804842c0d01a48a0128
Monotone-Revision: 299f32cc629a012dcfe549454d3f663e9b30cf69

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-07-15T08:51:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-07-15 sponge
+    * Slackware SlackBuild fixes.
+
 2009-07-14 dr|z3d
     * Increment to 0.7.5-10
     * Tidy up layout of readme.* files.
