* Installer: Don't launch the router from the postinstall.sh script       on linux anymore; add a panel to the installer to provide launch instructions.
Monotone-Parent: 299f32cc629a012dcfe549454d3f663e9b30cf69
Monotone-Revision: 8203363d91c2d93baef6c2edbf5e794052c2a7ff

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-15T15:29:37
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-07-15 zzz
+    * Installer: Don't launch the router from the postinstall.sh script
+      on linux anymore; add a panel to the installer to provide launch instructions.
+
 2009-07-15 sponge
     * Slackware SlackBuild fixes.
 
