--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,7 @@
 2009-07-15 zzz
-    * Console: Convert readme_zh.html from GB2312 to UTF-8
+    * Console:
+      - Make light the default theme
+      - Convert readme_zh.html from GB2312 to UTF-8
     * Installer: Don't launch the router from the postinstall.sh script
       on linux anymore; add a panel to the installer to provide launch instructions.
 
