* ministreaming:       - small pedantic fix     * streaming:       - Fix a deadly race condition.       - Some small pedantic fixes.     * core:       - Fix a deadly race condition.     * BOB:       - Fixed some races that occured from fixing races in streaming and core.       - Some badly needed code refactoring to depend less on the database.
Monotone-Parent: 455ea494e43b4c78d51644be30bf6fe8e2ff3473
Monotone-Revision: 23804a4a389ba2bddf86a2f90989489059f43d23

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-07-16T03:03:33
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,15 @@
+2009-07-16 sponge
+    * ministreaming:
+      - small pedantic fix
+    * streaming:
+      - Fix a deadly race condition.
+      - Some small pedantic fixes.
+    * core:
+      - Fix a deadly race condition.
+    * BOB:
+      - Fixed some races that occured from fixing races in streaming and core.
+      - Some badly needed code refactoring to depend less on the database.
+
 2009-07-15 zzz
     * Console:
       - Make light the default theme
