--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2009-07-21 zzz
+    * configclients.jsp: Close anchor
+    * Console: Drop top-level css, unused now
+    * Eepsite: Add default robots.txt (thanks v1v4)
+    * GeoIP: Add license info
+    * HTTP Proxy: Additional proxy.i2p restrictions
+    * ServiceManager: Drop, unused
+
 2009-07-20 zzz
     * BuildHandler: Increase threshold for dropping instead
       of rejecting to 81% (was 75%)
