--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-07-21 dr|z3d
+    * First stage of overhaul of webapps ui. 
+      susidns, susimail & i2psnark now lightly themed.
+    * Proxy error messages now themed as per chosen theme.
+    * Modest tweaks to the classic theme, et al.
+
 2009-07-21 zzz
     * configclients.jsp: Close anchor
     * Console: Drop top-level css, unused now
