--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-07-23 sponge
+    * Fix jdk 1.6izm in BOB as per zzz
+
 2009-07-22 dr|z3d
     * More work on the I2PSnark UI.
     * Start of improvements to tunnel table data.
