--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2009-07-23 sponge
+    * Add bob.i2p and sponge.i2p keys to hosts.txt
+
+2009-07-23 sponge
     * Fix jdk 1.6izm in BOB as per zzz
 
 2009-07-22 dr|z3d
