--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-07-23 dr|z3d
+    * Include additional tile graphics and I2PSnark header logo in /console/images/
+    * Tidy up some layout irks; add some last minute 0.7.6 pre-release sparkle!
+    * Ongoing overhaul of the I2PSnark UI.
+
 2009-07-23 sponge
     * Add bob.i2p and sponge.i2p keys to hosts.txt
 
