* Throttle: Decrease default max tunnels to 2500
Monotone-Parent: d1db79467d086ccdc47680cef84cd8f15ab614a3
Monotone-Revision: 9a4552d5d76dd6061a4f234ecbadefb7d1b70ff9

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-24T23:10:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-07-24 zzz
+    * Eepsite: Add Deutsch index page and css (thanks sperrbezirk!)
+    * Router: Support i2p.dir.base and i2p.dir.config passed in via properties
+    * Throttle: Decrease default max tunnels to 2500
+
 2009-07-23 dr|z3d
     * Include additional tile graphics and I2PSnark header logo in /console/images/
     * Tidy up some layout irks; add some last minute 0.7.6 pre-release sparkle!
