--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-07-25 dr|z3d
+    * Enhance the layout of /graphs.jsp
+    * Fix some of the irks in I2PSnark UI.
+    * Ongoing tweaks and fiddles the the theme css. Not finished by any means!
+
 2009-07-24 zzz
     * Eepsite: Add Deutsch index page and css (thanks sperrbezirk!)
     * Router: Support i2p.dir.base and i2p.dir.config passed in via properties
