--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-07-26 zzz
+    * Add wrapper.config and i2prouter comments for 'portable'
+    * Recognize same base and config dir in WorkingDir
+    * Reformat XInfoPanel in installer for clarity
+
 2009-07-25 dr|z3d
     * Enhance the layout of /graphs.jsp
     * Fix some of the irks in I2PSnark UI.
