--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-07-27 zzz
+    * Add flag dimensions to speed up profiles.jsp rendering
+    * Catch i2psnark create torrent with no data entered error
+      http://forum.i2p/viewtopic.php?t=3763
+    * Fix typos in proxy error files
+
 2009-07-26 zzz
     * Add wrapper.config and i2prouter comments for 'portable'
     * Recognize same base and config dir in WorkingDir
