--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-07-28 zzz
+    * Add new reseed URL (thanks eche|on!)
+
 2009-07-27 zzz
     * Add flag dimensions to speed up profiles.jsp rendering
     * Catch i2psnark create torrent with no data entered error
