--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2009-07-31 dr|z3d
+    * Resolve anomalous buttons and text fields in console ui. 
+    * Enhance presentation of data in /peers.jsp.
+    * Fix themes issue with horizontal width of radio/checkbox icons.
+      (Radioboxes currently non-functional in Opera).
+    * Other cosmetic UI enhancements.
+
 * 2009-07-31  0.7.6 released
 
 2009-07-31 zzz
