Fix for IE overflow issue; classic theme enhanced; more UI enhancements.
Monotone-Parent: c6366cbf5085b293da414724385da8bddc35bf78
Monotone-Revision: 6842e08e1b73dcd080bc0eb14fde2f1df7f678dd

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-02T12:57:50
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,8 +1,12 @@
+2009-08-02
+    * Better support for Internet Explorer/classic theme.
+    * Incremental improvements to classic theme.
+    * More UI tweaks and fiddles. 
+
 2009-07-31 dr|z3d
     * Resolve anomalous buttons and text fields in console ui. 
     * Enhance presentation of data in /peers.jsp.
     * Fix themes issue with horizontal width of radio/checkbox icons.
-      (Radioboxes currently non-functional in Opera).
     * Other cosmetic UI enhancements.
 
 * 2009-07-31  0.7.6 released
