--- a/history.txt
+++ b/history.txt
@@ -2,7 +2,8 @@
     * Better support for Internet Explorer/classic theme.
     * Incremental improvements to classic theme.
     * More UI tweaks and fiddles. 
-
+    * Fixes for I2PSnark UI; more to come.
+    
 2009-07-31 dr|z3d
     * Resolve anomalous buttons and text fields in console ui. 
     * Enhance presentation of data in /peers.jsp.
