Extensive overhaul of the classic theme; css hacks for IE!
Monotone-Parent: 7ab28330cc302bc80fadddbec2097c8787814115
Monotone-Revision: 818ab7489dedcd9185d047f00ae7ce24ad07ce90

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-03T13:24:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-2009-08-02
+2009-08-03 dr|z3d
+    * Extensive update to the Classic theme; custom css hacks for IE.
+
+2009-08-02 dr|z3d
     * Better support for Internet Explorer/classic theme.
     * Incremental improvements to classic theme.
     * More UI tweaks and fiddles. 
