Overhaul of sidepanel layout, with concommitant tweaks and fudges to the css.
Monotone-Parent: 6ab0f64b9f4992591ed989f8d89a859fc3ceaeaf
Monotone-Revision: 54bab963be15a2007c0038702a599195e5c33441

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-08T15:34:58
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2009-08-07 dr|z3d
+    * summarynoframe.jsp
+      - Main content now tabulated for better presentation
+      - Headings now more prominent
+      - Pruning where necessary of text strings
+    * Console themes (light/dark/classic)
+      - Ensure functionality with new sidepanel layout
+      - Custom hacks for IE/classic
+      - Enhanced form/button presentation    
+
 2009-08-07 zzz
     * build.xml:
       - Try to automate the release process
