Fix regression in classic theme that broke the proxy error pages.
Monotone-Parent: d63a48ba08be4e5575869ab3582eefc10223c6a1
Monotone-Revision: 2c89302763aa8dcb1a59e3e1f83fd653e01c15a5

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-11T14:50:12
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,7 @@
       - Ensure all sidepanel headings link to pertinent pages
       - First stage of enhanced Local Destinations sub-panel presentation
       - Move Configuration, Help, and I2PTunnel manager links to headings
+      - Add tooltips to all linked content; table content next in line
 
 2009-08-07 dr|z3d
     * summarynoframe.jsp
