2009-08-15 sponge     * Merge in dr|z3d and my own html fixes for router console java and jsp       files so that Opera (and now IE?) doesn't puke anymore on the missing       and misplaced HTML tags.     * Optimized all jsp files so that they are shorter to save space, which       is then used to fix the broken HTML. We should break even space-wise.     * Bump to -13.
Monotone-Parent: daabdd06bca74ade51d4ae916befb4cbb5f0996a
Monotone-Revision: 422858840598f319689b010d1de91b7b8bc7b506

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-08-15T16:28:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2009-08-15 sponge
+    * Merge in dr|z3d and my own html fixes for router console java and jsp
+      files so that Opera (and now IE?) doesn't puke anymore on the missing 
+      and misplaced HTML tags.
+    * Optimized all jsp files so that they are shorter to save space, which
+      is then used to fix the broken HTML. We should break even space-wise.
+    * Bump to -13.
+
 2009-08-11 sponge
     * Code Janitor time! Many fixes and documenting fixes that should be
       done in the future. for the most part, this is a general code cleanup.
