Update history.txt to reflect latest changes.
Monotone-Parent: b871876e4617b88206dec38a9954e242d36ecf92
Monotone-Revision: 5cae2ecbdef5069d67d941277ae9290175036753

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-18T02:46:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-08-18 dr|z3d
+    * Fixes for sidepanel
+    * Overhauled classic theme for i2ptunnels
+    * First stage of code validation to fix broken and "illegal" code
+    * Multifarious other UI tweaks and fiddles.
+
 2009-08-15 sponge
     * Merge in dr|z3d and my own html fixes for router console java and jsp
       files so that Opera (and now IE?) doesn't puke anymore on the missing 
