Java code to set Router Console password for dr|z3d
Monotone-Parent: 6cb0fc740721e37e0951adb71c00dc292b8181f6
Monotone-Revision: cc21b02c4aee8cf75627eff00aa6e43dfd0739b9

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-08-19T10:31:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-08-19 sponge
+    * Java code to set Router Console password for dr|z3d
+
 2009-08-18 dr|z3d
     * Fixes for sidepanel
     * Overhauled classic theme for i2ptunnels
