* Small logic fix for dr|z3d
Monotone-Parent: 5b1c8cca17ce959d164a3d3d95453124211fb41d
Monotone-Revision: 869d178de23c9945a98da66013e642b9aa435e28

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-09-02T00:08:03
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-09-02 sponge
+    * Small logic fix for dr|z3d
+
 2009-08-28 zzz
     * Client: Fail if no date handshake after 30s or no leaseset
       after 5m, rather than hanging forever.
