removes a bug in SAM v1 and v2 (introduced when merging with v3)
Monotone-Parent: f7d8b97991cf56fc5f98b17fb9bfc7eea49e84d2
Monotone-Revision: 1d77e0a89198e422acfb66d9310fad7b0b290e38

Monotone-Author: mkvore-commit@mail.i2p
Monotone-Date: 2009-09-07T17:33:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-09-07 mkvore
+    * removes a SAM v1&2 bug
+
 2009-09-04 zzz
     * SessionKeyManager, OCMOSJ, Garlic:
       - Enable per-client SessionKeyManagers for better anonymity
