* fixups to SlackBuilds. requiredbuilder does the wrong thing, and       thinks that java is perl! This isn't really a big deal,       the file format is simple enough and the requirements are known.
Monotone-Parent: 87ea7362c705ac88e017de2a79b929878089847f
Monotone-Revision: ffa1aab7aa8e75d75c183fd6f76140f7d840a6ae

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-09-21T08:54:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-09-21 sponge
+    * fixups to SlackBuilds. requiredbuilder does the wrong thing, and
+      thinks that java is perl! This isn't really a big deal, 
+      the file format is simple enough and the requirements are known.
+
 2009-09-07 mkvore
     * removes a SAM v1&2 bug
 
