fix snark npe caused by last checkin
Monotone-Parent: 0e405c95430a4bc0eba29ba10ccc714887d83c66
Monotone-Revision: d5b1ef74ebfbd8e8c1cd1d51c74e6ec542940ca3

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-04T14:06:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-10-04 zzz
+    * i2psnark: Fix NPE caused by last checkin (thanks wuxia!)
+
 2009-10-02 zzz
     * BuildMessageTest: Move out of the lib
     * i2psnark: Fix changing opentracker list
