doc and eepsite index updates
Monotone-Parent: 2995ad26b674863ab3bfe58f2fd6f103f403643b
Monotone-Revision: c03bacd7c3ed043276617cb71019d3c4b21fcc23

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-07T17:12:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-10-07 zzz
+    * Doc and eepsite_index updates
+    * UDP: Remove port number from thread names
+
 2009-10-04 zzz
     * i2psnark: Fix NPE caused by last checkin (thanks wuxia!)
 
