fix persistent client key on split directories - thanks user!
Monotone-Parent: ad05488f084e30f6284b019e6667e97596c7ae31
Monotone-Revision: d14138bee147039ed42a30254eb29e75c42c1ae2

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-09T13:56:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-10-09 zzz
+    * I2PTunnel: Fix persistent client tunnel keyfile location
+
 2009-10-07 zzz
     * Doc and eepsite_index updates
     * UDP: Remove port number from thread names
