fix rare ElGamal AIOOBE
Monotone-Parent: 379c083782a25ed8ef93ec3a8446a95c277dfbc3
Monotone-Revision: d203ac237f3507d4d4e4ac35692ac8e1c7afbd2c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-09T16:00:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,7 @@
 2009-10-09 zzz
+    * ElGamalEngine: Fix rare AIOOBE (thanks hottuna!)
     * I2PTunnel: Fix persistent client tunnel keyfile location
+    * peers.jsp: Fix NTCP rate formatting (thanks hottuna!)
 
 2009-10-09 dr|z3d
     * Add paste.i2p2.i2p, and echelon's software links to readmes (thanks 
