Cleanups after review and prep for release
Monotone-Parent: 0e7ca8624b2a0c9556108bf4fb1cdb121718995d
Monotone-Revision: b2d3643cd024191a6b6d2170ae4592114b4592b4

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-11T22:51:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2009-10-12  0.7.7 released
+
+2009-10-11 zzz
+    * Misc. cleanups after review, prep for release
+
 2009-10-09 zzz
     * ElGamalEngine: Fix rare AIOOBE (thanks hottuna!)
     * I2PTunnel: Fix persistent client tunnel keyfile location
